--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>Jory Durham | Developer</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Todo: improve your SEO by adding a small description of you -->
@@ -46,13 +46,13 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Jory Durham</span>
           <br />
-          I'm the Unknown Developer.
+          I'm a Front-end Web Developer.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >Know more</a
+            >Learn More</a
           >
         </p>
       </div>
@@ -71,7 +71,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="assets/profile.jpg"
+                src="Images\profil pic.jpg"
                 alt="Profile Image"
               />
             </div>
@@ -79,11 +79,20 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you can!
+                I'm a self-taught Front-End Web developer. 
+                I have experience in HTML, CSS, JavaScript, and React. 
+                I also have experience in some Back-End Web development using Node.js. 
+                I spend 5 years serving in the US Navy from March 2018 - March 2023. 
+                I have been working in web development for a year now, 
+                Take a look at my most recent projects:
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                I love film camera photography and street fashion. 
+                My 3 month, 6 month and year goals are as follows:
+                To get a job in web development and to become advanced in back-end web development,
+                To learn a new pogramming language, either C++ or python,
+                To start my own business.
+
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -112,21 +121,19 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">ROBOFRIENDS</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    ROBOFRIENDS is an app that allowed me to exercise my abilities with JavaScript 
+                    and React creating an app that allowes you to search through an API of different 
+                    'robots' and locate whatever specific robot friend you are looking for. 
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://jorydurham.github.io/Robofriends/"
                 >
                   See Live
                 </a>
@@ -134,7 +141,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href=""
                 >
                   Source Code
                 </a>
@@ -153,7 +160,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/robofriends.png"
                     />
                   </div>
                 </a>
@@ -279,12 +286,12 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          <p class="contact-wrapper__text">Looking forward to working with you!</p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
+            href="mailto:jorydurham@icloud.com"
             >Call to Action</a
           >
         </div>
@@ -300,12 +307,12 @@
         </a>
         <div class="social-links">
           <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
+            <i class="fa fa-camera-retro fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://www.linkedin.com/in/jory-durham-ab7733257/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://github.com/jorydurham" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
