--- a/src/index.html
+++ b/src/index.html
@@ -81,16 +81,16 @@
               <p class="about-wrapper__info-text">
                 I'm a self-taught Front-End Web developer. 
                 I have experience in HTML, CSS, JavaScript, and React. 
-                I also have experience in some Back-End Web development using Node.js. 
-                I spend 5 years serving in the US Navy from March 2018 - March 2023. 
-                I have been working in web development for a year now, 
+                I also have experience in some Back-End Web development using Node.js and PostgresSQL.  
+                I spent 5 years serving in the US Navy from March 2018 - January 2023. 
+                I have been working in web development for over six months, 
                 Take a look at my most recent projects:
               </p>
               <p class="about-wrapper__info-text">
                 I love film camera photography and street fashion. 
                 My 3 month, 6 month and year goals are as follows:
                 To get a job in web development and to become advanced in back-end web development,
-                To learn a new pogramming language, either C++ or python,
+                To learn a new pogramming language: either C++ or Python, and
                 To start my own business.
 
               </p>
