changing project and editing details

--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/resume.pdf"
+                  href="assets/myResume.pdf"
                 >
                   View Resume
                 </a>
@@ -228,7 +228,23 @@
           </div>
           <!-- /END Project -->
 
-         
+         <!-- **** Contact Section **** -->
+      <section id="contact">
+        <div class="container">
+          <h2 class="section-title">Contact</h2>
+          <div class="contact-wrapper load-hidden">
+            <p class="contact-wrapper__text">Looking forward to working with you!</p>
+            <a
+              rel="noreferrer"
+              target="_blank"
+              class="cta-btn cta-btn--resume"
+              href="mailto:jorydurham@icloud.com"
+              >Call to Action</a
+            >
+          </div>
+        </div>
+      </section>
+      <!-- /END Contact Section -->
 
     <!-- **** Footer Section **** -->
     <footer class="footer navbar-static-bottom">
@@ -250,40 +266,7 @@
 
         <hr />
 
-        <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
-        <p class="footer__text">
-          © 2021 - Template developed by
-          <a rel="noreferrer" href="https://github.com/cobidev" target="_blank"
-            >Jacobo Martínez</a
-          >
-        </p>
-
-        <!-- TO DO: remove this entire paragraph once you finish your portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a
-          >
-        </p>
-      </div>
-    </footer>
-    <!-- /END Footer Section -->
+        
 
     <script defer type="module" src="index.js"></script>
   </body>
