--- a/src/index.html
+++ b/src/index.html
@@ -83,14 +83,14 @@
                 I have experience in HTML, CSS, JavaScript, and React. 
                 I also have experience in some Back-End Web development using Node.js and PostgresSQL.  
                 I spent 5 years serving in the US Navy from March 2018 - January 2023. 
-                I have been working in web development for over six months, 
+                I have been working in web development for over six months. 
                 Take a look at my most recent projects:
               </p>
               <p class="about-wrapper__info-text">
                 I love film camera photography and street fashion. 
                 My 3 month, 6 month and year goals are as follows:
                 To get a job in web development and to become advanced in back-end web development,
-                To learn a new pogramming language: either C++ or Python, and
+                To learn a new programming language: either C++ or Python, and
                 To start my own business.
 
               </p>
@@ -125,7 +125,7 @@
                 <div>
                   <p class="mb-4">
                     ROBOFRIENDS is an app that allowed me to exercise my abilities with JavaScript 
-                    and React creating an app that allowes you to search through an API of different 
+                    and React creating an app that allows you to search through an API of different 
                     'robots' and locate whatever specific robot friend you are looking for. 
                   </p>
                 </div>
@@ -172,13 +172,13 @@
                     Smart Brain AI is an app that uses new AI technology to 
                     detect a human face in a picture. By entering in a .PNG address 
                     the smart brain will detect and highlight the face in the image. 
-                    Smart Brain is an app built with a server and database to allow users
-                    to register and to signin once registered. It also tracks how many 
+                    Smart Brain AI is an app built with a server and database to allow users
+                    to register and to sign-in once registered. It also tracks how many 
                     faces you've detected and keeps a score. Smart Brain AI is built with 
-                    React for the frontend and Node.js for the server. This project 
+                    React for the front-end and Node.js for the server. This project 
                     use the full extent of my knowledge and skills with a variety of different
-                    components pieced together in the frontend to connecting the server and database 
-                    on the backend making a full functioning application.
+                    components pieced together in the front-end to connecting the server and database 
+                    on the back-end making a full functioning application.
                   </p>
                 </div>
                 <a
