--- a/src/index.html
+++ b/src/index.html
@@ -142,7 +142,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://jorydurham.github.io/Robofriends/" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -195,7 +195,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://jorydurham.github.io/smart-brain/" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
