--- a/src/index.html
+++ b/src/index.html
@@ -90,8 +90,8 @@
                 I love film camera photography and street fashion. 
                 My 3 month, 6 month and year goals are as follows:
                 To get a job in web development and to become advanced in back-end web development,
-                To learn a new programming language: either C++ or Python, and
-                To start my own business.
+                to learn a new programming language: either C++ or Python, and
+                to start my own business.
 
               </p>
               <span class="d-flex mt-3">
